--- a/index.html
+++ b/index.html
@@ -240,35 +240,23 @@
 				</header>
 
 				<div class="row">
-					<div class="4u 12u(narrower)">
-
-							<section>
-								<a href="https://www.kakaocorp.com" target="_blank" class="image-nonoverlayed featured"><img src="images/kakao.png" alt="" /></a>
-								<header>
-									<h3>Kakao Corp.</h3>
-								</header>
-								<p>장소제공</p>
-							</section>
-
-					</div>
-					<div class="4u 12u(narrower)">
-
+					<div class="3u 12u(narrower)">
 						<section>
-							<a href="http://www.hanbit.co.kr/" target="_blank" class="image-nonoverlayed featured"><img src="images/hanbit.png" alt="" /></a>
+							<a href="https://www.kakaocorp.com" target="_blank" class="image-nonoverlayed featured"><img src="images/kakao.png" alt="" /></a>
+							<header>
+								<h3>Kakao Corp.</h3>
+							</header>
+							<p>장소제공</p>
+						</section>
+					</div>
+
+					<div class="3u 12u(narrower)">
+						<section>
+							<a href="http://www.hanbit.co.kr/media/" target="_blank" class="image-nonoverlayed featured"><img src="images/hanbit.png" alt="" /></a>
 							<header>
 								<h3>한빛미디어</h3>
 							</header>
 							<p>개발관련 서적증정</p>
-						</section>
-
-					</div>
-					<div class="4u 12u(narrower)">
-						<section>
-							<a href="http://connect.or.kr/" target="_blank" class="image-nonoverlayed featured"><img src="images/connect.png" alt="" /></a>
-							<header>
-								<h3>커넥트 재단</h3>
-							</header>
-							<p>기념품제공</p>
 						</section>
 					</div>
 
@@ -282,9 +270,31 @@
 						</section>
 					</div>
 
-
+					<div class="3u 12u(narrower)">
+						<section>
+							<a href="https://www.connect.or.kr" target="_blank" class="image-nonoverlayed featured"><img src="images/connect.png" alt="" /></a>
+							<header>
+								<h3>커넥트 재단</h3>
+							</header>
+							<p>굿즈 증정</p>
+						</section>
+					</div>
 
 				</div>
+
+
+				<!-- <div class="3u 12u(narrower)"> -->
+					<section>
+						<header>
+							<h2>감사합니다</h2>
+						</header>
+						맹지님<br/>
+						아실님<br/>
+						클린트님<br/>
+					</section>
+				<!-- </div> -->
+
+			</div>
 			</section>
 
 
