--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
 								<li class="center">Xcode에서 디버깅 시작하기</li>
 								<!-- <li><br><iframe width="100%" height="315" src="https://www.youtube.com/embed/wouM0cQKx_w" frameborder="0" allowfullscreen></iframe><br></li> -->
 								녹화본에 문제가 발생하여 업로드 불가능합니다.<br/>죄송합니다.
-								<li><a href="" target="_blank">발표 슬라이드</a></li>
+								<li><a href="ppt/jercy.pdf" target="_blank">발표 슬라이드</a></li>
 								<a href="mailto:wotjdzz1@naver.com" class="icon circle fa-envelope-o" target="_blank"><span class="label">E-mail</span></a></li>
 							</ul>
 						</section>
@@ -215,15 +215,15 @@
 					<div class="4u 12u(narrower)">
 
 						<section>
-							<a href="mailto:vbmania@me.com" class="image-nonoverlayed featured" alt="" /><img src="images/profile_anyObject.png" alt="" /></a>
+							<a href="" class="image-nonoverlayed featured" alt="" /><img src="images/profile_anyObject.png" alt="" /></a>
 							<header>
 								<h3><strong>AnyObject</strong> 님</h3>
 							</header>
 							<ul class="mine">
 								<li class="center">iOS TDD 실무에 적용하기</li>
 								<li><br><iframe width="100%" height="315" src="https://www.youtube.com/embed/wDo8656evW8" frameborder="0" allowfullscreen></iframe><br></li>
-								<li><a href="" target="_blank">발표 슬라이드</a></li>
-								<a href="mailto:vbmania@me.com" class="icon circle fa-envelope-o" target="_blank"><span class="label">E-mail</span></a></li>
+								<li><a href="ppt/TDD2018.pdf" target="_blank">발표 슬라이드</a></li>
+								<a href="https://github.com/vbmania" class="icon circle fa-github" target="_blank"><span class="label">E-mail</span></a></li>
 							</ul>
 						</section>
 
