슬라이드 업데이트

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 							<ul class="mine">
 								<li class="center">미리보는 Marzipan</li>
 								<li><br><iframe width="100%" height="315" src="https://www.youtube.com/embed/egZ_kPa7MzE" frameborder="0" allowfullscreen></iframe><br></li>
-								<li><a href="" target="_blank">발표 슬라이드</a></li>
+								<li><a href="https://www.slideshare.net/ssuserdd9d08/marzipan-111949362" target="_blank">발표 슬라이드</a></li>
 								<li>
 								<a href="https://facebook.com/gbmksquare" class="icon circle fa-facebook" target="_blank"><span class="label">Facebook</span></a>
 								<a href="https://instagram.com/gbmksquare" class="icon circle fa-instagram" target="_blank"><span class="label">Instagram</span></a>
